--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQL10DialectDialect
+spring.datasource.url=${JDBC_DATABASE_URL}
+# common JPA update option
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
