--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQL10DialectDialect
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=${JDBC_DATABASE_URL}
 # common JPA update option
 spring.jpa.show-sql=true
