--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://srv-captain--sfdoryklam-postgresql-12x:5432/dive-log-database?user=dive-log-user&password=ayAwhqB7srRuVtfz&sslmode=disable
+spring.datasource.url=${JDBC_DATABASE_URL}
+
 # common JPA update option
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
