--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.profiles.active=local
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=${JDBC_DATABASE_URL}
 
