--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ repositories {
 	mavenCentral()
 }
 
-dependencies {
+dependencies {	
+	implementation group: 'com.google.firebase', name: 'firebase-admin', version: '8.0.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
