--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,8 @@
 // call ${WEBHOOK_URL} for deploy when push to main & develop branch
-name: Deploy
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
