--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Deploy
-        env: WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
+        env: 
+          WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
         run: |
           curl -X GET $WEBHOOK_URL
 
